--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -43,6 +42,8 @@ dependencies:
   shared_preferences: ^2.0.15
   image_picker: ^1.0.7
   intl:
+  url_launcher:
+
 
 dev_dependencies:
   flutter_test:
