--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   provider: ^6.0.4
   shared_preferences: ^2.0.15
   image_picker: ^1.0.7
+  google_fonts: ^6.2.1
   intl:
   url_launcher:
-
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
